13061
Attempting to compile the following file:

{code}
package a.b.scala
case class Test[T](t : T)
{code}

gives this error:

{code}
test.scala:2: error: type Nothing is not a member of package a.b.scala
case class Test[T](t : T)
                ^
one error found
{code}

Also occurs if the case class is in package a.b and package a.b.scala is defined.

Tested against rev 13855
